# lb

./: Makefile  index_first_even.c  index_first_even.h  index_last_odd.c  index_last_odd.h  menu.c  sum_before_even_and_after_odd.c  sum_before_even_and_after_odd.h  sum_between_even_odd.c  sum_between_even_odd.h
AI/: main.py
gg/include/: Field.h  Game.h  Ship.h  ShipManager.h  ShipSegment.h  app.h  main.h  settings_dialog.h  ship_drop_target.h
gg/src/: Field.cpp  Game.cpp  Ship.cpp  ShipManager.cpp  app.cpp  main.cpp  settings_dialog.cpp  ship_drop_target.cpp
gg1/: CMakeLists.txt
gg1/include/: Field.h  Game.h  Ship.h  ShipManager.h  app.h  bitmap_renderer.h  settings_dialog.h  ship_drop_target.h
gg1/src/: Field.cpp  Game.cpp  Ship.cpp  ShipManager.cpp  app.cpp  bitmap_renderer.cpp  main.cpp  settings_dialog.cpp  ship_drop_target.cpp
gg_lab1/: CMakeLists.txt
gg_lab1/include/: Field.h  Game.h  Ship.h  ShipManager.h  app.h  bitmap_renderer.h  common.h  main.h  settings_dialog.h  ship_drop_target.h
gg_lab1/src/: Field.cpp  Game.cpp  Ship.cpp  ShipManager.cpp  app.cpp  bitmap_renderer.cpp  main.cpp  settings_dialog.cpp  ship_drop_target.cpp
